# pipe-cli

./: .gitignore  Cargo.toml  QUANTUM_ENCRYPTION.md  README.md  setup.sh  test-download.md
.github/workflows/: ci.yml
src/: encryption.rs  keyring.rs  lib.rs  main.rs  password_utils.rs  quantum.rs  quantum_integration_test.rs  quantum_keyring.rs  sync.rs
