[package]
name = "pipe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4.0", features = ["derive"] }
dirs = "5.0.1"
futures-util = "0.3"
indicatif = "0.17.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
rpassword = "7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros", "fs", "full"] }
tokio-util = { version = "0.7", features = ["io"] }
walkdir = "2.3.4"

[dev-dependencies]
tempfile = "3.7.0"