[package]
name = "pipe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4.0", features = ["derive", "env"] }
dirs = "5.0.1"
futures-util = "0.3"
indicatif = "0.17.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
rpassword = "7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "fs", "full"] }
tokio-util = { version = "0.7", features = ["io"] }
walkdir = "2.3.4"
tempfile = "3.8"
atty = "0.2"
regex = "1.10"

# Encryption dependencies
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# Key management
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"

# Post-quantum cryptography
pqcrypto-mlkem = "0.1"
pqcrypto-mldsa = "0.1" 
pqcrypto-traits = "0.3"
sha3 = "0.10"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.7.0"